--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "luxon": "^2.0.2",
     "mongoose": "^6.0.5"
   }
 }
