--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "nodemon": "^2.0.12"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "luxon": "^2.0.2",
     "mongoose": "^6.0.5"
   }
