--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@babel/core": "^7.15.5",
     "@babel/node": "^7.15.4",
+    "@babel/plugin-proposal-do-expressions": "^7.14.5",
     "@babel/preset-env": "^7.15.6",
     "nodemon": "^2.0.12"
   },
@@ -27,6 +28,7 @@
     "bcrypt": "^5.0.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-validator": "^6.12.1",
     "jsonwebtoken": "^8.5.1",
     "luxon": "^2.0.2",
     "mongoose": "^6.0.5"
