--- a/package.json
+++ b/package.json
@@ -26,12 +26,15 @@
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-validator": "^6.12.1",
     "jsonwebtoken": "^8.5.1",
     "luxon": "^2.0.2",
-    "mongoose": "^6.0.5"
+    "mongoose": "^6.0.5",
+    "multer": "^1.4.3",
+    "path": "^0.12.7"
   }
 }
