--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "## Project creating a RESTish API with diffrent frontend sites that use it.",
   "main": "index.js",
   "scripts": {
-    "start": "node --exec babel-node src/index.js"
+    "start": "./node_modules/.bin/babel-node src/index.js"
   },
   "repository": {
     "type": "git",
