--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "## Project creating a RESTish API with diffrent frontend sites that use it.",
   "main": "index.js",
   "scripts": {
-    "start": "./node_modules/.bin/babel-node src/index.js"
+    "build": "npm run clean && npm run build-babel",
+    "start": "npm run build && node ./build/index.js",
+    "clean": "rm -rf build && mkdir build",
+    "build-babel": "babel -d ./build ./src -s"
   },
   "repository": {
     "type": "git",
@@ -18,6 +21,7 @@
   },
   "homepage": "https://github.com/yuvalkarif/blog-api#readme",
   "devDependencies": {
+    "@babel/cli": "^7.15.7",
     "@babel/core": "^7.15.5",
     "@babel/node": "^7.15.4",
     "@babel/plugin-proposal-do-expressions": "^7.14.5",
